--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -36,6 +36,12 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.searchRIMG{
+  height: 75px;
+  width: 75PX;
+}
+
+
 *,
 *::before,
 *::after {
