--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -48,6 +48,20 @@
   box-sizing: border-box;
 }
 
+.grow { 
+  transition: all .1s ease-in-out; 
+  }
+  
+  .grow:hover { 
+    transform: scale(1.03); 
+    }
+
+.scroll {
+    max-height: 72vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    }
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
